// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`autoprefixer > autoprefixer 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2024": true,
      "node": true,
    },
    "globals": {
      "document": "readonly",
      "window": "readonly",
    },
    "ignorePatterns": [
      "coverage",
    ],
    "overrides": [
      {
        "files": [
          "**/*.test.{js,jsx}",
          "**/*.test.{ts,tsx}",
        ],
        "rules": {
          "no-unused-expressions": "off",
          "node/global-require": "off",
        },
      },
      {
        "files": [
          "bin/autoprefixer",
        ],
        "rules": {
          "node/global-require": "off",
        },
      },
    ],
    "plugins": [
      "import",
      "node",
      "promise",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "checkForEach": false,
        },
      ],
      "block-scoped-var": "error",
      "constructor-super": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "for-direction": "error",
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-array-constructor": "error",
      "no-async-promise-executor": "error",
      "no-caller": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-eval": "error",
      "no-ex-assign": "error",
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-iterator": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-multi-str": "error",
      "no-nested-ternary": "error",
      "no-new-func": "error",
      "no-new-native-nonconstructor": "error",
      "no-new-wrappers": "error",
      "no-obj-calls": "error",
      "no-object-constructor": "error",
      "no-proto": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": [
        "error",
        {
          "builtinGlobals": false,
        },
      ],
      "no-regex-spaces": "error",
      "no-return-assign": [
        "error",
        "except-parens",
      ],
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": "error",
      "no-setter-return": "error",
      "no-shadow": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-template-curly-in-string": "error",
      "no-this-before-super": "error",
      "no-throw-literal": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unmodified-loop-condition": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
          "allowTernary": true,
        },
      ],
      "no-unused-vars": [
        "error",
        {
          "args": "after-used",
          "vars": "all",
        },
      ],
      "no-use-before-define": [
        "error",
        {
          "classes": false,
          "functions": false,
          "variables": false,
        },
      ],
      "no-useless-backreference": "error",
      "no-useless-call": "error",
      "no-useless-catch": "error",
      "no-useless-computed-key": "error",
      "no-useless-constructor": "error",
      "no-useless-escape": "error",
      "no-useless-rename": "error",
      "no-useless-return": "error",
      "no-var": "warn",
      "no-void": "error",
      "no-with": "error",
      "node/global-require": "error",
      "node/no-exports-assign": "error",
      "node/no-new-require": "error",
      "node/no-path-concat": "error",
      "prefer-exponentiation-operator": "error",
      "prefer-promise-reject-errors": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "preserve-caught-error": "error",
      "promise/param-names": "error",
      "require-yield": "error",
      "symbol-description": "error",
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  "skipped": {
    "js-plugins": [
      "perfectionist/sort-variable-declarations",
      "perfectionist/sort-intersection-types",
      "perfectionist/sort-import-attributes",
      "perfectionist/sort-export-attributes",
      "perfectionist/sort-heritage-clauses",
      "perfectionist/sort-array-includes",
      "perfectionist/sort-named-imports",
      "perfectionist/sort-named-exports",
      "perfectionist/sort-object-types",
      "perfectionist/sort-union-types",
      "perfectionist/sort-switch-case",
      "perfectionist/sort-decorators",
      "perfectionist/sort-interfaces",
      "perfectionist/sort-jsx-props",
      "perfectionist/sort-classes",
      "perfectionist/sort-imports",
      "perfectionist/sort-exports",
      "perfectionist/sort-objects",
      "perfectionist/sort-enums",
      "perfectionist/sort-sets",
      "perfectionist/sort-maps",
      "prefer-let/prefer-let",
    ],
    "not-implemented": [
      "func-name-matching",
      "n/handle-callback-err",
      "n/no-deprecated-api",
      "n/no-extraneous-require",
      "n/no-missing-require",
      "n/no-unpublished-require",
      "n/no-unsupported-features/es-builtins",
      "n/no-unsupported-features/es-syntax",
      "n/no-unsupported-features/node-builtins",
      "n/process-exit-as-throw",
      "no-implied-eval",
      "no-unreachable-loop",
      "object-shorthand",
      "one-var",
      "prefer-arrow-callback",
      "prefer-regex-literals",
    ],
    "nursery": [
      "getter-return",
      "import-x/export",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "camelcase",
      "dot-notation",
      "no-dupe-args",
      "no-invalid-this",
      "no-octal",
      "no-octal-escape",
      "no-undef-init",
    ],
  },
  "warnings": [],
}
`;

exports[`autoprefixer --js-plugins > autoprefixer--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2024": true,
      "node": true,
    },
    "globals": {
      "document": "readonly",
      "window": "readonly",
    },
    "ignorePatterns": [
      "coverage",
    ],
    "jsPlugins": [
      "eslint-plugin-perfectionist",
      {
        "name": "eslint-js",
        "specifier": "@oxlint/plugin-eslint",
      },
      {
        "name": "n-js",
        "specifier": "eslint-plugin-n",
      },
      "eslint-plugin-prefer-let",
    ],
    "overrides": [
      {
        "files": [
          "**/test/*",
        ],
        "jsPlugins": [
          {
            "name": "n-js",
            "specifier": "eslint-plugin-n",
          },
        ],
        "rules": {
          "n-js/no-unpublished-require": "off",
          "n-js/no-unsupported-features/node-builtins": "off",
        },
      },
      {
        "files": [
          "**/*.test.{js,jsx}",
          "**/*.test.{ts,tsx}",
        ],
        "rules": {
          "no-unused-expressions": "off",
          "node/global-require": "off",
        },
      },
      {
        "files": [
          "bin/autoprefixer",
        ],
        "jsPlugins": [
          {
            "name": "n-js",
            "specifier": "eslint-plugin-n",
          },
        ],
        "rules": {
          "n-js/no-unsupported-features/es-syntax": "off",
          "node/global-require": "off",
        },
      },
      {
        "files": [
          "data/prefixes.js",
        ],
        "jsPlugins": [
          {
            "name": "import-js",
            "specifier": "eslint-plugin-import",
          },
        ],
        "rules": {
          "import-js/order": "off",
        },
      },
    ],
    "plugins": [
      "import",
      "node",
      "promise",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "checkForEach": false,
        },
      ],
      "block-scoped-var": "error",
      "constructor-super": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "eslint-js/camelcase": [
        "error",
        {
          "allow": [
            "^UNSAFE_",
          ],
          "ignoreGlobals": true,
          "properties": "never",
        },
      ],
      "eslint-js/dot-notation": [
        "error",
        {
          "allowKeywords": true,
        },
      ],
      "eslint-js/func-name-matching": "error",
      "eslint-js/no-dupe-args": "error",
      "eslint-js/no-implied-eval": "error",
      "eslint-js/no-invalid-this": "error",
      "eslint-js/no-octal": "error",
      "eslint-js/no-octal-escape": "error",
      "eslint-js/no-undef-init": "error",
      "eslint-js/no-unreachable-loop": "error",
      "eslint-js/object-shorthand": "error",
      "eslint-js/one-var": [
        "error",
        {
          "initialized": "never",
        },
      ],
      "eslint-js/prefer-arrow-callback": "error",
      "eslint-js/prefer-regex-literals": [
        "error",
        {
          "disallowRedundantWrapping": true,
        },
      ],
      "for-direction": "error",
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "n-js/handle-callback-err": [
        "error",
        "^(err|error)$",
      ],
      "n-js/no-deprecated-api": "error",
      "n-js/no-extraneous-require": "error",
      "n-js/no-missing-require": "error",
      "n-js/no-unpublished-require": "error",
      "n-js/no-unsupported-features/es-builtins": "error",
      "n-js/no-unsupported-features/es-syntax": [
        "error",
        {
          "ignores": [
            "modules",
            "dynamicImport",
          ],
        },
      ],
      "n-js/no-unsupported-features/node-builtins": [
        "error",
        {
          "ignores": [
            "worker_threads",
          ],
        },
      ],
      "n-js/process-exit-as-throw": "error",
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-array-constructor": "error",
      "no-async-promise-executor": "error",
      "no-caller": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-eval": "error",
      "no-ex-assign": "error",
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-iterator": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-multi-str": "error",
      "no-nested-ternary": "error",
      "no-new-func": "error",
      "no-new-native-nonconstructor": "error",
      "no-new-wrappers": "error",
      "no-obj-calls": "error",
      "no-object-constructor": "error",
      "no-proto": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": [
        "error",
        {
          "builtinGlobals": false,
        },
      ],
      "no-regex-spaces": "error",
      "no-return-assign": [
        "error",
        "except-parens",
      ],
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": "error",
      "no-setter-return": "error",
      "no-shadow": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-template-curly-in-string": "error",
      "no-this-before-super": "error",
      "no-throw-literal": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unmodified-loop-condition": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
          "allowTernary": true,
        },
      ],
      "no-unused-vars": [
        "error",
        {
          "args": "after-used",
          "vars": "all",
        },
      ],
      "no-use-before-define": [
        "error",
        {
          "classes": false,
          "functions": false,
          "variables": false,
        },
      ],
      "no-useless-backreference": "error",
      "no-useless-call": "error",
      "no-useless-catch": "error",
      "no-useless-computed-key": "error",
      "no-useless-constructor": "error",
      "no-useless-escape": "error",
      "no-useless-rename": "error",
      "no-useless-return": "error",
      "no-var": "warn",
      "no-void": "error",
      "no-with": "error",
      "node/global-require": "error",
      "node/no-exports-assign": "error",
      "node/no-new-require": "error",
      "node/no-path-concat": "error",
      "perfectionist/sort-array-includes": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-classes": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-decorators": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-enums": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-export-attributes": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-exports": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-heritage-clauses": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-import-attributes": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-imports": [
        "warn",
        {
          "groups": [
            "side-effect",
            "side-effect-style",
            "style",
            [
              "builtin",
              "external",
              "unknown",
            ],
            [
              "internal",
              "parent",
              "sibling",
              "index",
            ],
          ],
          "newlinesBetween": 1,
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-interfaces": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-intersection-types": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-jsx-props": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-maps": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-named-exports": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-named-imports": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-object-types": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-objects": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-sets": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-switch-case": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-union-types": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "perfectionist/sort-variable-declarations": [
        "warn",
        {
          "order": "asc",
          "type": "alphabetical",
        },
      ],
      "prefer-exponentiation-operator": "error",
      "prefer-let/prefer-let": "error",
      "prefer-promise-reject-errors": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "preserve-caught-error": "error",
      "promise/param-names": "error",
      "require-yield": "error",
      "symbol-description": "error",
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "getter-return",
      "import-x/export",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [],
  },
  "warnings": [],
}
`;

exports[`autoprefixer --type-aware > autoprefixer--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "es2024": true,
      "node": true,
    },
    "globals": {
      "document": "readonly",
      "window": "readonly",
    },
    "ignorePatterns": [
      "coverage",
    ],
    "overrides": [
      {
        "files": [
          "**/*.test.{js,jsx}",
          "**/*.test.{ts,tsx}",
        ],
        "rules": {
          "no-unused-expressions": "off",
          "node/global-require": "off",
        },
      },
      {
        "files": [
          "bin/autoprefixer",
        ],
        "rules": {
          "node/global-require": "off",
        },
      },
    ],
    "plugins": [
      "import",
      "node",
      "promise",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "checkForEach": false,
        },
      ],
      "block-scoped-var": "error",
      "constructor-super": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "for-direction": "error",
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-array-constructor": "error",
      "no-async-promise-executor": "error",
      "no-caller": "error",
      "no-case-declarations": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-cond-assign": "error",
      "no-const-assign": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-control-regex": "error",
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-empty-character-class": "error",
      "no-empty-pattern": "error",
      "no-eval": "error",
      "no-ex-assign": "error",
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-extra-boolean-cast": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-invalid-regexp": "error",
      "no-irregular-whitespace": "error",
      "no-iterator": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-multi-str": "error",
      "no-nested-ternary": "error",
      "no-new-func": "error",
      "no-new-native-nonconstructor": "error",
      "no-new-wrappers": "error",
      "no-obj-calls": "error",
      "no-object-constructor": "error",
      "no-proto": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": [
        "error",
        {
          "builtinGlobals": false,
        },
      ],
      "no-regex-spaces": "error",
      "no-return-assign": [
        "error",
        "except-parens",
      ],
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": "error",
      "no-setter-return": "error",
      "no-shadow": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-template-curly-in-string": "error",
      "no-this-before-super": "error",
      "no-throw-literal": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unmodified-loop-condition": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
          "allowTernary": true,
        },
      ],
      "no-unused-vars": [
        "error",
        {
          "args": "after-used",
          "vars": "all",
        },
      ],
      "no-use-before-define": [
        "error",
        {
          "classes": false,
          "functions": false,
          "variables": false,
        },
      ],
      "no-useless-backreference": "error",
      "no-useless-call": "error",
      "no-useless-catch": "error",
      "no-useless-computed-key": "error",
      "no-useless-constructor": "error",
      "no-useless-escape": "error",
      "no-useless-rename": "error",
      "no-useless-return": "error",
      "no-var": "warn",
      "no-void": "error",
      "no-with": "error",
      "node/global-require": "error",
      "node/no-exports-assign": "error",
      "node/no-new-require": "error",
      "node/no-path-concat": "error",
      "prefer-exponentiation-operator": "error",
      "prefer-promise-reject-errors": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "preserve-caught-error": "error",
      "promise/param-names": "error",
      "require-yield": "error",
      "symbol-description": "error",
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  "skipped": {
    "js-plugins": [
      "perfectionist/sort-variable-declarations",
      "perfectionist/sort-intersection-types",
      "perfectionist/sort-import-attributes",
      "perfectionist/sort-export-attributes",
      "perfectionist/sort-heritage-clauses",
      "perfectionist/sort-array-includes",
      "perfectionist/sort-named-imports",
      "perfectionist/sort-named-exports",
      "perfectionist/sort-object-types",
      "perfectionist/sort-union-types",
      "perfectionist/sort-switch-case",
      "perfectionist/sort-decorators",
      "perfectionist/sort-interfaces",
      "perfectionist/sort-jsx-props",
      "perfectionist/sort-classes",
      "perfectionist/sort-imports",
      "perfectionist/sort-exports",
      "perfectionist/sort-objects",
      "perfectionist/sort-enums",
      "perfectionist/sort-sets",
      "perfectionist/sort-maps",
      "prefer-let/prefer-let",
    ],
    "not-implemented": [
      "func-name-matching",
      "n/handle-callback-err",
      "n/no-deprecated-api",
      "n/no-extraneous-require",
      "n/no-missing-require",
      "n/no-unpublished-require",
      "n/no-unsupported-features/es-builtins",
      "n/no-unsupported-features/es-syntax",
      "n/no-unsupported-features/node-builtins",
      "n/process-exit-as-throw",
      "no-implied-eval",
      "no-unreachable-loop",
      "object-shorthand",
      "one-var",
      "prefer-arrow-callback",
      "prefer-regex-literals",
    ],
    "nursery": [
      "getter-return",
      "import-x/export",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "camelcase",
      "dot-notation",
      "no-dupe-args",
      "no-invalid-this",
      "no-octal",
      "no-octal-escape",
      "no-undef-init",
    ],
  },
  "warnings": [],
}
`;

exports[`autoprefixer merge > autoprefixer--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
      "es2024": true,
      "node": true,
    },
    "globals": {
      "document": "readonly",
      "window": "readonly",
    },
    "ignorePatterns": [
      "coverage",
    ],
    "overrides": [
      {
        "files": [
          "**/*.test.{js,jsx}",
          "**/*.test.{ts,tsx}",
        ],
        "rules": {
          "no-unused-expressions": "off",
          "node/global-require": "off",
        },
      },
      {
        "files": [
          "bin/autoprefixer",
        ],
        "rules": {
          "node/global-require": "off",
        },
      },
    ],
    "plugins": [
      "import",
      "node",
      "promise",
    ],
    "rules": {
      "accessor-pairs": [
        "error",
        {
          "enforceForClassMembers": true,
          "setWithoutGet": true,
        },
      ],
      "array-callback-return": [
        "error",
        {
          "allowImplicit": false,
          "checkForEach": false,
        },
      ],
      "block-scoped-var": "error",
      "curly": [
        "error",
        "multi-line",
      ],
      "default-case-last": "error",
      "eqeqeq": [
        "error",
        "always",
        {
          "null": "ignore",
        },
      ],
      "import-x/first": "error",
      "import-x/no-absolute-path": [
        "error",
        {
          "amd": false,
          "commonjs": true,
          "esmodule": true,
        },
      ],
      "import-x/no-duplicates": "error",
      "import-x/no-named-default": "error",
      "import-x/no-webpack-loader-syntax": "error",
      "new-cap": [
        "error",
        {
          "capIsNew": false,
          "newIsCap": true,
          "properties": true,
        },
      ],
      "no-array-constructor": "error",
      "no-case-declarations": "error",
      "no-console": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-empty": [
        "error",
        {
          "allowEmptyCatch": true,
        },
      ],
      "no-extend-native": "error",
      "no-extra-bind": "error",
      "no-fallthrough": "error",
      "no-labels": [
        "error",
        {
          "allowLoop": false,
          "allowSwitch": false,
        },
      ],
      "no-lone-blocks": "error",
      "no-lonely-if": "error",
      "no-multi-str": "error",
      "no-nested-ternary": "error",
      "no-new-func": "error",
      "no-new-wrappers": "error",
      "no-object-constructor": "error",
      "no-proto": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": [
        "error",
        {
          "builtinGlobals": false,
        },
      ],
      "no-regex-spaces": "error",
      "no-return-assign": [
        "error",
        "except-parens",
      ],
      "no-self-assign": [
        "error",
        {
          "props": true,
        },
      ],
      "no-self-compare": "error",
      "no-sequences": "error",
      "no-shadow": "error",
      "no-template-curly-in-string": "error",
      "no-throw-literal": "error",
      "no-unexpected-multiline": "error",
      "no-unmodified-loop-condition": "error",
      "no-unneeded-ternary": [
        "error",
        {
          "defaultAssignment": false,
        },
      ],
      "no-unused-expressions": [
        "error",
        {
          "allowShortCircuit": true,
          "allowTaggedTemplates": true,
          "allowTernary": true,
        },
      ],
      "no-unused-vars": [
        "error",
        {
          "args": "after-used",
          "vars": "all",
        },
      ],
      "no-use-before-define": [
        "error",
        {
          "classes": false,
          "functions": false,
          "variables": false,
        },
      ],
      "no-useless-computed-key": "error",
      "no-useless-constructor": "error",
      "no-useless-return": "error",
      "no-var": "warn",
      "no-void": "error",
      "node/global-require": "error",
      "node/no-exports-assign": "error",
      "node/no-new-require": "error",
      "node/no-path-concat": "error",
      "prefer-exponentiation-operator": "error",
      "prefer-promise-reject-errors": "error",
      "prefer-rest-params": "error",
      "prefer-spread": "error",
      "preserve-caught-error": "error",
      "promise/param-names": "error",
      "symbol-description": "error",
      "use-isnan": [
        "error",
        {
          "enforceForIndexOf": true,
          "enforceForSwitchCase": true,
        },
      ],
      "valid-typeof": [
        "error",
        {
          "requireStringLiterals": true,
        },
      ],
      "yoda": [
        "error",
        "never",
      ],
    },
  },
  "skipped": {
    "js-plugins": [
      "perfectionist/sort-variable-declarations",
      "perfectionist/sort-intersection-types",
      "perfectionist/sort-import-attributes",
      "perfectionist/sort-export-attributes",
      "perfectionist/sort-heritage-clauses",
      "perfectionist/sort-array-includes",
      "perfectionist/sort-named-imports",
      "perfectionist/sort-named-exports",
      "perfectionist/sort-object-types",
      "perfectionist/sort-union-types",
      "perfectionist/sort-switch-case",
      "perfectionist/sort-decorators",
      "perfectionist/sort-interfaces",
      "perfectionist/sort-jsx-props",
      "perfectionist/sort-classes",
      "perfectionist/sort-imports",
      "perfectionist/sort-exports",
      "perfectionist/sort-objects",
      "perfectionist/sort-enums",
      "perfectionist/sort-sets",
      "perfectionist/sort-maps",
      "prefer-let/prefer-let",
    ],
    "not-implemented": [
      "func-name-matching",
      "n/handle-callback-err",
      "n/no-deprecated-api",
      "n/no-extraneous-require",
      "n/no-missing-require",
      "n/no-unpublished-require",
      "n/no-unsupported-features/es-builtins",
      "n/no-unsupported-features/es-syntax",
      "n/no-unsupported-features/node-builtins",
      "n/process-exit-as-throw",
      "no-implied-eval",
      "no-unreachable-loop",
      "object-shorthand",
      "one-var",
      "prefer-arrow-callback",
      "prefer-regex-literals",
    ],
    "nursery": [
      "getter-return",
      "import-x/export",
      "no-undef",
      "no-unreachable",
    ],
    "type-aware": [],
    "unsupported": [
      "camelcase",
      "dot-notation",
      "no-dupe-args",
      "no-invalid-this",
      "no-octal",
      "no-octal-escape",
      "no-undef-init",
    ],
  },
  "warnings": [],
}
`;
